# SceneForge

./: .gitignore  FRONTEND_CAPABILITY_MATRIX.md  IMPLEMENTATION_PLAN.md  IMPROVEMENT_ROADMAP.md  IMPROVEMENT_ROUND2.md  LICENSE  OPTIMIZATION_LONG_TASK.md  README.md  index.html  package-lock.json  package.json  vite.config.ts
.cargo/: config.toml
.github/workflows/: desktop-build.yml
docs/: CROSS_PLATFORM.md
docs/plans/: 2026-07-10-audio-first-generation-session-design.md  2026-07-11-subtitle-layout-engine-design.md  2026-07-12-ai-first-subtitle-segmentation-design.md  2026-07-13-cross-platform-runtime-design.md  2026-07-13-preview-cache-black-screen-fix.md  2026-07-13-whisper-first-use-download-design.md  2026-07-15-capcut-parity-gap-fix-plan.md
luts/: bw.cube  cinematic.cube  cool.cube  fresh.cube  moody.cube  none.cube  sepia.cube  soft.cube  vintage.cube  warm.cube
scripts/: prepare-sidecars.mjs  run-ts-tests.mjs  smoke-webcodecs-preview.py  verify-brand-identity.mjs  verify-proxy-generation.mjs  verify-r32-duration.mjs  verify-web-fallback-coverage.mjs
src/: App.tsx  fonts.ts  luts.ts  main.tsx  styles.css  tauri.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json  tauri.dev.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: ai.rs  asr.rs  commands.rs  ffmpeg.rs  ffmpeg_expression.rs  lib.rs  lut_data.rs  main.rs  models.rs  pexels.rs  pixabay.rs  render_graph.rs  render_plan.rs  source_window.rs  storage.rs  styles.css  temp.rs  tools.rs  tts.rs  whisper_models.rs
src/components/: KeyframeCurveEditor.tsx  MaskPreview.tsx  SceneForgeLogo.tsx  (+4 more)
(+150 files in other folders)
